# datafusion-cookbook

./: .gitignore  Cargo.toml  README.md  config.yaml
content/docs/s3/: Cargo.toml  README.md
content/docs/s3-custom-endpoint/: Cargo.toml  README.md
content/docs/s3-custom-endpoint/src/: main.rs
content/docs/s3-globbing/: README.md
content/docs/s3-globbing/src/: main.rs
content/docs/s3-sdk-credentials/: Cargo.toml  README.md
content/docs/s3-sdk-credentials/src/: main.rs
content/docs/s3/src/: main.rs
s3/: README.md
s3-custom-endpoint/: README.md
s3-globbing/: Cargo.toml  README.md
s3-globbing/src/: main.rs
s3-sdk-credentials/: README.md
s3-sdk-credentials/src/: main.rs
s3/src/: main.rs
